--- a/cleaning.vcxproj
+++ b/cleaning.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="src\zpayments2fio.cpp" />
     <ClCompile Include="src\zpayments2fioform.cpp" />
     <ClCompile Include="src\zpaymentsform.cpp" />
+    <ClCompile Include="src\zperiodform.cpp" />
     <ClCompile Include="src\zusers.cpp" />
     <ClCompile Include="src\zviewgroups.cpp" />
     <ClCompile Include="src\zeditbaseform.cpp" />
@@ -221,6 +222,7 @@
     <QtMoc Include="src\zpayments2fio.h" />
     <QtMoc Include="src\zpaymentsform.h" />
     <QtMoc Include="src\zpayments2fioform.h" />
+    <QtMoc Include="src\zperiodform.h" />
     <ClInclude Include="src\zperiods.h" />
     <ClInclude Include="src\zsettings.h" />
     <ClInclude Include="src\zpersons.h" />
@@ -240,6 +242,7 @@
     <QtUic Include="src\zpayments2fio.ui" />
     <QtUic Include="src\zpayments2fioform.ui" />
     <QtUic Include="src\zpaymentsform.ui" />
+    <QtUic Include="src\zperiodform.ui" />
     <QtUic Include="src\ztariffs.ui" />
     <QtUic Include="src\zusersform.ui" />
     <QtUic Include="src\zviewgroups.ui" />
